plugins {
    id 'java'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}

java {
    sourceCompatibility = '20'
    targetCompatibility = '20'
}
group = 'fr.hoenheimsports'
version = 'unspecified'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
    jvmArgs('--enable-preview')
}

